# Changelog
# $Id$
nn-nn-12 - Version 5.1.23
  - Static charset/collation maps were updated.

  - Fix for Bug#14260352, difference in Timestamp value returned with rewriteBatchedStatements=true.

  - Fix for Bug#60598, nativeSQL() truncates fractional seconds.

  - Fix for Bug#40279, Timestamp values get truncated when passed as prepared statement parameters.
    This was partly fixed in 5.1.19 but that fix did not cover useLegacyDatetimeCode=true case.

  - Fix for Bug#14665141, Diff results returned from ResultSet and CachedRowSet with new password hashing.
    Test suite modified to don't perform comparison of PASSWORD() results if old_passwords=2
    because with SHA-256 password hashing enabled they are nondeterministic.

09-06-12 - Version 5.1.22
  - Fix for Bug#57662, Incorrect Query Duration When useNanosForElapsedTime Enabled.

  - Fix for Bug#65503, ResultSets created by PreparedStatement.getGeneratedKeys() are not close()d.

  - Fix for Bug#63800, getVersionColumns() does not return timestamp fields; always empty.
    Added support of ON UPDATE CURRENT_TIMESTAMP for TIMESTAMP and DATETIME fields.

  - Fix for Bug#41752, Can't connect mysqld which character_set_server=ucs2.

  - Fix for Bug#65508, getCharsetNameForIndex() should be faster.

  - Fix for Bug#14563127, Load-balanced connection fails to select valid host, closes connection
    on re-balance.

07-05-12 - Version 5.1.21
  - Added new built-in authentication plugin com.mysql.jdbc.authentication.Sha256PasswordPlugin
    ("sha256_password").

  - Fix for Bug#64731, StringUtils.getBytesWrapped throws StringIndexOutOfBoundsException.

  - Added new built-in authentication plugin com.mysql.jdbc.authentication.MysqlClearPasswordPlugin
    ("mysql_clear_password"). It allows C/J based clients to connect to MySQL accounts which use
    PAM authentication for example. SSL connection required for this authentication method.